--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <h3 class="row p-4 mx-2" id="see-scores">See the Highscores!</h3>
+    <h3 class="timer text-center">Time Left: <span id="timer"></span></h3>
 </body>
 </html>
