Another block out of the way. Visible errors, but we gotta keep going for now

--- a/index.html
+++ b/index.html
@@ -30,14 +30,22 @@
         </article>
     </section>
 
-    <!-- Generated section depending on what question the user is on -->
-    <section id="question-container" class="d-flex flex-column align-items-center my-4 hide">
+<!-- Generated section depending on what question the user is on -->
+    <section id="question-container" class="d-flex flex-column text-center align-items-center my-4 hide">
         <article class="quiz-questions">
             <article class="question"></article>
 
-            <article id="answers" class="btn-block"></article>
+            <article id="answers" class="btn-grid"></article>
         </article>
     </section>
 
+<!-- End card section that allows the user to insert initials for score keeping -->
+    <section id="outro-container" class="d-flex flex-column text-center align-items-center my-4 hide">
+        <article class="container outro">
+            <article id=your-score>
+                <h2>Awesome! That's it!</h2>
+            </article>
+        </article>
+    </section>
 </body>
 </html>
