Finished the block and remembered that scoring doesnt matter if the user doesnt know their time or score. Fixing now.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Answer as many questions as possible within the allocated time. 
                 A correct answer will net you 5 points! Though a wrong answer will remove 1 point and 5 seconds from your time.
             </p>
-            <button id="start" class="btn start bg-dark text-white">BEGIN!</button>
+            <button id="start" class="btn startstop bg-dark text-white rounded">BEGIN!</button>
         </article>
     </section>
 
@@ -45,7 +45,14 @@
             <article id=your-score>
                 <h2>Awesome! That's it!</h2>
             </article>
+            <form id="score-form" class="d-flex flex-column text-center align-items-center my-4 hide"
+                <h3>
+                    Enter your initials:
+                    <input type="text" name="init" id="init" class="text-input" />
+                    <button class="btn startstop bg-dark rounded text-white" id="sumbit-name" type="submit">Submit!</button>
+                </h3>
         </article>
     </section>
+
 </body>
 </html>
