Quick section, but good to get the process out in order. Dont want to mess up in confusion down the line.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
         </article>
     </section>
 
+<!-- Section to inform the user if their answer was correct or incorrect -->
+    <section class="d-flex flex-column text-center align-items-center my-4 hide" id="correct">
+        <h3>
+            Correct! Nice!
+        </h3>
+    </section>
+    <section class="d-flex flex-column text-center align-items-center my-4 hide">
+        <h3>
+            Sorry, that's not correct!
+        </h3>
+    </section>
+
 <!-- End card section that allows the user to insert initials for score keeping -->
     <section id="outro-container" class="d-flex flex-column text-center align-items-center my-4 hide">
         <article class="container outro">
@@ -53,6 +65,11 @@
                 </h3>
         </article>
     </section>
+
+    
+
+    
+
 
 </body>
 </html>
