Post dinner and nap update. Big updates coming soon

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     </section>
 
 <!-- Section to inform the user if their answer was correct or incorrect -->
-    <section class="d-flex flex-column text-center align-items-center my-4 hide" id="correct">
+    <section class="d-flex flex-column text-center align-items-center my-4 hide" id="right">
         <h3>
             Correct! Nice!
         </h3>
     </section>
-    <section class="d-flex flex-column text-center align-items-center my-4 hide">
+    <section class="d-flex flex-column text-center align-items-center my-4 hide" id="wrong"> 
         <h3>
             Sorry, that's not correct!
         </h3>
@@ -74,8 +74,12 @@
             High Scores!
         </h2>
         <ol id="bigScores-list" class="score-list d-flex text-center align-items-center my-2"></ol>
-        <button id="go-back" class="btn d-flex my-3 bg-dark text-white">Go Back!</button>
-        <button id="clear-bigScores" class="btn d-flex my-3 bg-dark text-white">Clear High Scores!</button>
+        <button id="go-back" class="btn d-flex my-3 bg-dark text-white">
+            Go Back!
+        </button>
+        <button id="clear-bigScores" class="btn d-flex my-3 bg-dark text-white">
+            Clear High Scores!
+        </button>
     </section>
     
 
