DOM elements added, now just for the logic. Hopefully wont be too bad

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- Generated section depending on what question the user is on -->
     <section id="question-container" class="d-flex flex-column text-center align-items-center my-4 hide">
         <article class="quiz-questions">
-            <article class="question"></article>
+            <article id="question"></article>
 
             <article id="answers" class="btn-grid"></article>
         </article>
@@ -63,7 +63,7 @@
                 <h3>
                     Enter your initials:
                     <input type="text" name="init" id="init" class="text-input" />
-                    <button class="btn startstop bg-dark rounded text-white" id="sumbit-name" type="submit">Submit!</button>
+                    <button class="btn startstop bg-dark rounded text-white" id="submit-name" type="submit">Submit!</button>
                 </h3>
         </article>
     </section>
